# lowess-lib

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  expectile.cc  lowess.cc  lowesslib.cc  pyproject.toml  setup.py  test.py  test_nelder_mead.cc
ext/: lowesslib_numba.py
ext/rust/: Cargo.toml  pyproject.toml
inc/: nelder_mead.h
numba/: lowesslib.py
rust/: README
rust/src/: lib.rs
tests/: test_lowess.py  test_nelder_mead.cc
