[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = []

[project]
name = "lowesslib"
version = "0.2.2"
description = "Utilities for Locally Weighted Scatterplot Smoothing"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Arnaldo Leon", email = "amleon@alum.mit.edu" },
]
dependencies = [
    "numpy>=1.18",
]

[project.urls]
Source = "https://github.com/aleon1138/lowess-lib"
