[build-system]
requires = [
    "pybind11>=2.6",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = []

[project]
name = "lowesslib"
version = "0.2.2"
description = "Utilities for Locally Weighted Scatterplot Smoothing"
readme = "README.md"
authors = [
    { name = "Arnaldo Leon", email = "amleon@alum.mit.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.18",
]

[project.urls]
Source = "https://github.com/aleon1138/lowess-lib"
